client/src/styles/ItemsList.module.scss
.clothesGrid {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  gap: 20px;
}

.outfitsGrid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 20px;
}

@media (max-width: 768px) {
  .clothesGrid,
  .outfitsGrid {
    grid-template-columns: 1fr 1fr;
    gap: 12px;
    padding-inline-start: 0;
  }
}

@media (max-width: 480px) {
  .clothesGrid,
  .outfitsGrid {
    grid-template-columns: 1fr;
  }
}

